# ToneTrigger

./: .gitignore  BUILDING.md  CMakeLists.txt  FEATURES.md  README.md  build.sh
src/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioProcessor.cpp  AudioProcessor.h  ChordDetector.cpp  ChordDetector.h  EffectProcessor.cpp  EffectProcessor.h  MainComponent.cpp  MainComponent.h  MidiProcessor.cpp  MidiProcessor.h  TriggerManager.cpp  TriggerManager.h  main.cpp
src/Effects/: BaseEffect.h  ChorusEffect.cpp  ChorusEffect.h  CompressorEffect.cpp  CompressorEffect.h  DelayEffect.cpp  DelayEffect.h  DistortionEffect.cpp  DistortionEffect.h  FilterEffect.cpp  FilterEffect.h  ReverbEffect.cpp  ReverbEffect.h
src/UI/: AudioSettingsPanel.cpp  AudioSettingsPanel.h  AudioVisualizer.cpp  AudioVisualizer.h  EffectPanel.cpp  EffectPanel.h  MidiSettingsPanel.cpp  MidiSettingsPanel.h  TriggerPanel.cpp  TriggerPanel.h
src/Utils/: AudioUtils.cpp  AudioUtils.h  ConfigManager.cpp  ConfigManager.h  PresetManager.h
